kubernetes/apps/networking/phpipam/phpipam-web/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpipam-www
  labels:
    app: phpipam
    component: www
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: www
  template:
    metadata:
      labels:
        app: phpipam
        component: www
    spec:
      containers:
        - name: phpipam-www
          image: phpipam/phpipam-www:1.5x
          imagePullPolicy: Always
          ports:
            - containerPort: 80
              protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpipam-cron
  labels:
    app: phpipam
    component: cron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpipam
      component: cron
  template:
    metadata:
      labels:
        app: phpipam
        component: cron
    spec:
      containers:
        - name: phpipam-cron
          image: phpipam/phpipam-cron:1.5x
